--- a/content/zh-cn/posts/gobasic/1 前导.md
+++ b/content/zh-cn/posts/gobasic/1 前导.md
@@ -7,11 +7,10 @@ tags: ["程序猿工作经历"]
 description: "程序猿工作经历，掏心窝子学习Go语言"
 featured: false
 ---
-# 1. 前导
 
 “Go基础系列”是对 Go语言基础的系列梳理文章。在开始这个系列之前，我先”坦白“下我的一个工作经历，再对这个系列说明几个问题。
 
-# 经历
+## 经历
 
 如果不想看这段，可以直接跳到下面，看对这个系列的问题
 
@@ -43,17 +42,17 @@ featured: false
 
 好了，经历就啰嗦到这了，下来正式进入 Go语言基础的学习。
 
-# 适合谁看
+## 适合谁看
 
 掌握一门开发语言，例如PHP、Java、C 等等。就是有程序员的开发经验就行，这样对于语言的类比学习就很容易。
 
 如果没有掌握过任何语言，也可以告诉我，我尽我的能力，把知道的告诉你。让你一定能明白我写的文章是啥意思（有这自信，尽管来，我不怂）。
 
-# 遇到不懂的
+## 遇到不懂的
 
 不管你是小白还是大神，如果你遇到任何 Go 相关问题，都可以在文章下方评论，我都会回复。如果遇到文章的不足之处也希望提出来，我会完善到你满意为止（看着待遇不错吧）。
 
-# 内容大纲
+## 内容大纲
 
 不是目录，以下大概只是粗略的记录，后期可能会随着内容的完善进行增加。
 
