fix page keywords

--- a/content/posts/gobasic/1 前导.md
+++ b/content/posts/gobasic/1 前导.md
@@ -4,6 +4,7 @@ date: 2021-07-07T18:18:56+08:00
 draft: false
 categories: ["Go基础系列"]
 tags: ["程序猿工作经历"]
+keywords: ["go","程序员"]
 description: "程序猿工作经历，掏心窝子学习Go语言"
 featured: false
 ---
