--- a/content/posts/gobasic/2 环境搭建.md
+++ b/content/posts/gobasic/2 环境搭建.md
@@ -12,7 +12,7 @@ featured: false
 
 准备哪些？
 
-1. Go 安装包，公众号回复 “1000” 获取安装包。
+1. Go 安装包：[Win Go安装包](https://studygolang.com/dl/golang/go1.16.4.windows-amd64.msi)、[Linux Go安装包（二进制）](https://studygolang.com/dl/golang/go1.16.4.linux-amd64.tar.gz)、[Mac Go安装包](https://studygolang.com/dl/golang/go1.16.4.darwin-amd64.pkg)
 2. Git 环境，Go 下载依赖包借助 Git工具，这里不做讲解。
 
 ## 测试是否安装
