修改“常量”的文章bug

--- a/content/posts/gobasic/5 常量及运算符.md
+++ b/content/posts/gobasic/5 常量及运算符.md
@@ -128,7 +128,21 @@ const (
 )
 ```
 
-`iota` 从0开始，每增加新的一行就会自动加一，直到遇到新的赋值或重新声明一个 `const块` 时 `iota` 重置为0。
+`iota` 从0开始，每增加新的一行就会自动加一，直到重新声明一个 `const` 时 `iota` 重置为0，遇到新的赋值时 `iota` 将不再应用。
+
+再说说一个 `const块` 中出现多个 `iota` 关键字时是什么情况。
+
+```go
+const (
+	a = iota  // a = 0
+	b         // b = 1
+	c         // c = 2
+	d = 5     // d = 5   
+	e = iota  // e = 4
+)
+```
+当 `d` 常量赋值为 5 时，`iota` 只是暂时不应用，直到再次使用，而 `iota` 继续保持在增加新的一行时自增一。
+
 
 `iota` 也可以参加运算，举几个例子就明白了。
 
