增加go函数文章

--- a/content/posts/gobasic/2 环境搭建.md
+++ b/content/posts/gobasic/2 环境搭建.md
@@ -3,7 +3,7 @@ title: "Go基础系列：2. 环境搭建"
 date: 2021-07-08T18:18:56+08:00
 draft: false
 categories: ["Go基础系列"]
-tags: ["Go环境搭建"]
+tags: ["Go", "Go 环境搭建"]
 description: "windows、linux、mac的环境搭建，编辑器goland配置"
 featured: false
 ---
