--- a/content/posts/gobasic/4 变量及数据类型.md
+++ b/content/posts/gobasic/4 变量及数据类型.md
@@ -3,7 +3,7 @@ title: "Go基础系列：4. 变量及数据类型"
 date: 2021-07-10T18:18:56+08:00
 draft: false
 categories: ["Go基础系列"]
-tags: ["go语言变量", "go语言数据类型"]
+tags: ["go", "变量", "数据类型"]
 description: "go语言变量，go语言数据类型"
 featured: false
 ---
