--- a/content/posts/gobasic/5 常量及运算符.md
+++ b/content/posts/gobasic/5 常量及运算符.md
@@ -1,10 +1,9 @@
-
 ---
 title: "Go基础系列：5. 常量及运算符"
 date: 2021-07-11T18:18:56+08:00
 draft: false
 categories: ["Go基础系列"]
-tags: ["go语言常量", "go语言运算符"]
+tags: ["Go", "常量", "运算符"]
 description: "go语言常量的使用和其它语言的不同之处，go语言的运算符优先级，go语言运算符结合性"
 featured: false
 ---
