--- a/content/posts/gobasic/6 流程控制.md
+++ b/content/posts/gobasic/6 流程控制.md
@@ -3,7 +3,7 @@ title: "Go基础系列：6. 流程控制"
 date: 2021-07-12T18:18:56+08:00
 draft: false
 categories: ["Go基础系列"]
-tags: ["go语言流程控制","for-range"]
+tags: ["go", "流程控制","for-range"]
 description: "go语言if、for、switch语句使用，break、continue、goto、fallthrough关键字使用"
 featured: false
 ---
