--- a/content/posts/gobasic/8 切片.md
+++ b/content/posts/gobasic/8 切片.md
@@ -3,8 +3,8 @@ title: "Go基础系列：8. 内置集合 - 切片"
 date: 2021-07-15T16:18:56+08:00
 draft: false
 categories: ["Go基础系列"]
-tags: ["go语言切片","go语言切片和数组的区别"]
-description: "go语言切片"
+tags: ["go", "切片", "数组"]
+description: "一文搞定 Go 语言切片，并对比了数组与切片的区别"
 featured: false
 ---
 
