--- a/content/posts/gobasic/1 前导.md
+++ b/content/posts/gobasic/1 前导.md
@@ -3,8 +3,8 @@ title: "Go基础系列：1. 学习前导"
 date: 2021-07-07T18:18:56+08:00
 draft: false
 categories: ["Go基础系列"]
-tags: ["程序猿工作经历"]
-keywords: ["go","程序员"]
+tags: ["Go", "工作经历"]
+keywords: ["Go","程序员经历"]
 description: "程序猿工作经历，掏心窝子学习Go语言"
 featured: false
 ---
