--- a/content/posts/gobasic/17.md
+++ b/content/posts/gobasic/17.md
@@ -47,7 +47,7 @@ fmt.Println(s)
 
 `%s` 标示字符串，将"老苗"字符串填充到`%s` 位置。下来看看到底有哪些占位符？
 
-### 普通占位符
+## 普通占位符
 
 先创建一个数据，作为打印的对象。
 
@@ -237,7 +237,7 @@ fmt.Printf("%#U", 0x82d7)
 U+82D7 '苗'
 ```
 
-### 浮点数与复数
+## 浮点数与复数
 
 ### 1. %b
 
