--- a/content/posts/gobasic/18.md
+++ b/content/posts/gobasic/18.md
@@ -295,7 +295,7 @@ bufferChan := make(chan string, 3)
 测试如下：
 
 ```go
-// // concurrency/bufferchannel/main.go
+// concurrency/bufferchannel/main.go
 package main
 
 import "fmt"
