--- a/content/posts/go/2.md
+++ b/content/posts/go/2.md
@@ -391,7 +391,7 @@ net/http/cookie.go 和 net/http/cookie_test.go 文件都放置在 http 包下。
 
 例如：定义一些网络协议的包可能会复用，而定义一些可执行命令的包则不会。
 
-![Untitled](Google%EF%BC%9A12%20%E4%B8%AA%20Golang%20%E6%9C%80%E4%BD%B3%E5%AE%9E%E8%B7%B5%20564510cde15b460fb6a3842e2a7b46ca/Untitled.png)
+![](../images/2-1.png)
 
 - `cmd` 可执行命令的包，不提供复用
 - `pkg` 可复用的包
