update css and brief

--- a/content/posts/go/2.md
+++ b/content/posts/go/2.md
@@ -383,7 +383,7 @@ net/http/cookie.go 和 net/http/cookie_test.go 文件都放置在 http 包下。
 
 **个人思考**：当一个包的说明信息比较多时，可以考虑创建 doc.go 文件。
 
-### 5. 使用 `go get` 可获取你的包
+### 5. 使用 go get 可获取你的包
 
 当你的包被提供使用时，应该清晰的让使用者知道哪些可复用，哪些不可复用。
 
