增加精选文章和公众号二维码位置调整

--- a/content/posts/go/2.md
+++ b/content/posts/go/2.md
@@ -5,7 +5,7 @@ draft: false
 categories: ["Go经验"]
 tags: ["Go"]
 description: "12 条 Golang 最佳实践，并在原文基础上增加了解读与补充"
-featured: false
+featured: true
 ---
 这是直接总结好的 12 条，详细的再继续往下看：
 
