--- a/content/posts/gobasic/17.md
+++ b/content/posts/gobasic/17.md
@@ -5,6 +5,7 @@ draft: false
 categories: ["Go基础系列"]
 tags: ["Go","占位符"]
 description: "Go 语言中 20 个占位符的想详细讲解，还有几个标记符号的用法"
+featured: true
 ---
 # 学到什么
 
