--- a/content/posts/gobasic/1 前导.md
+++ b/content/posts/gobasic/1 前导.md
@@ -1,12 +1,11 @@
 ---
 title: "Go基础系列：1. 学习前导"
 date: 2021-07-07T18:18:56+08:00
-draft: false
-categories: ["Go基础系列"]
+categories: ["Golang"]
 tags: ["Go", "工作经历"]
 keywords: ["Go","程序员经历"]
 description: "程序猿工作经历，掏心窝子学习Go语言"
-featured: false
+series: ["Go基础系列"]
 ---
 
 “Go基础系列”是对 Go语言基础的系列梳理文章。在开始这个系列之前，我先”坦白“下我的一个工作经历，再对这个系列说明几个问题。
