--- a/content/posts/gobasic/2 环境搭建.md
+++ b/content/posts/gobasic/2 环境搭建.md
@@ -2,10 +2,10 @@
 title: "Go基础系列：2. 环境搭建"
 date: 2021-07-08T18:18:56+08:00
 draft: false
-categories: ["Go基础系列"]
+categories: ["Golang"]
 tags: ["Go", "Go 环境搭建"]
 description: "windows、linux、mac的环境搭建，编辑器goland配置"
-featured: false
+series: ["Go基础系列"]
 ---
 
 我会对Linux、Windows、Mac系统下的搭建逐一讲解，包括编辑器的配置。
