--- a/content/posts/go/1.md
+++ b/content/posts/go/1.md
@@ -2,7 +2,7 @@
 title: "快速了解 “小字端” 和 “大字端” 及 Go 语言中的使用"
 date: 2021-10-26T11:18:56+08:00
 draft: false
-categories: ["Go经验"]
+categories: ["Golang"]
 tags: ["Go"]
 description: "小字端、大字端、Go 语言中的应用"
 featured: false
