--- a/content/posts/go/2.md
+++ b/content/posts/go/2.md
@@ -2,7 +2,7 @@
 title: "Google：12 条 Golang 最佳实践"
 date: 2021-10-27T11:14:56+08:00
 draft: false
-categories: ["Go经验"]
+categories: ["Golang"]
 tags: ["Go"]
 description: "12 条 Golang 最佳实践，并在原文基础上增加了解读与补充"
 featured: true
