--- a/content/posts/gobasic/17.md
+++ b/content/posts/gobasic/17.md
@@ -2,10 +2,11 @@
 title: "Go基础系列：17. 详解 20 个占位符"
 date: 2021-09-30T18:12:00+08:00
 draft: false
-categories: ["Go基础系列"]
+categories: ["Golang"]
 tags: ["Go","占位符"]
 description: "Go 语言中 20 个占位符的想详细讲解，还有几个标记符号的用法"
 featured: true
+series: ["Go基础系列"]
 ---
 # 学到什么
 
