--- a/content/posts/gobasic/18.md
+++ b/content/posts/gobasic/18.md
@@ -2,9 +2,10 @@
 title: "Go基础系列：18. 并发"
 date: 2021-10-22T10:12:00+08:00
 draft: false
-categories: ["Go基础系列"]
+categories: ["Golang"]
 tags: ["Goroutine", "channel"]
 description: "并发与并行的区别，什么是Goroutine，什么是通道，select语句使用等等"
+series: ["Go基础系列"]
 ---
 
 ## 学到什么
