--- a/content/posts/gobasic/4 变量及数据类型.md
+++ b/content/posts/gobasic/4 变量及数据类型.md
@@ -2,10 +2,10 @@
 title: "Go基础系列：4. 变量及数据类型"
 date: 2021-07-10T18:18:56+08:00
 draft: false
-categories: ["Go基础系列"]
+categories: ["Golang"]
 tags: ["Go", "变量", "数据类型"]
 description: "go语言变量，go语言数据类型"
-featured: false
+series: ["Go基础系列"]
 ---
 
 ## 变量
