--- a/content/posts/gobasic/7 数组.md
+++ b/content/posts/gobasic/7 数组.md
@@ -2,10 +2,10 @@
 title: "Go基础系列：7. 内置集合 - 数组"
 date: 2021-07-14T16:18:56+08:00
 draft: false
-categories: ["Go基础系列"]
+categories: ["Golang"]
 tags: ["go", "数组"]
 description: "go语言中数组的用法，go语言中通道、map、数组和切片的遍历"
-featured: false
+series: ["Go基础系列"]
 ---
 
 ## 学到什么
