--- a/content/posts/gobasic/8 切片.md
+++ b/content/posts/gobasic/8 切片.md
@@ -2,10 +2,10 @@
 title: "Go基础系列：8. 内置集合 - 切片"
 date: 2021-07-15T16:18:56+08:00
 draft: false
-categories: ["Go基础系列"]
+categories: ["Golang"]
 tags: ["go", "切片", "数组"]
 description: "一文搞定 Go 语言切片，并对比了数组与切片的区别"
-featured: false
+series: ["Go基础系列"]
 ---
 
 ## 学到什么
