修改单元测试

--- a/content/posts/gobasic/19.md
+++ b/content/posts/gobasic/19.md
@@ -470,6 +470,57 @@ go tool cover -html profile
 
 可得：总语句数为 3，覆盖语句数为 2，计算覆盖率为 2/3 = 66.7%。
 
+如果想达到 100% 覆盖，只需要增加 else 的测试情况，如下：
+
+```go
+func TestGetSex2(t *testing.T) {
+	excepted := "女"
+	actual := GetSex(0)
+	if actual != excepted {
+		t.Errorf("excepted：%s, actual:%s", excepted, actual)
+	}
+}
+```
+
+
+### 2. 模式 count
+该模式和 set 模式比较相似，唯一的区别是 count 模式对于相同的语句执行次数会进行累计。
+
+
+使用下面命令生成 profile 文件：
+
+```bash
+go test -coverprofile profile -covermode count
+```
+这次测试，会将 TestGetSex 和 TestGetSex2 函数都运行，自然也会 100% 覆盖。
+
+profile 文件内容：
+```text
+mode: count
+github.com/miaogaolin/gobasic/testcover/sex.go:3.29,4.14 1 2
+github.com/miaogaolin/gobasic/testcover/sex.go:4.14,6.3 1 1
+github.com/miaogaolin/gobasic/testcover/sex.go:6.8,8.3 1 1
+```
+如果再切换到 set 模式下生成，唯一不同点内容中第二行中的最后一个数字，set 模式下会是 1。
+
+那 count 模式下为啥是 2 呢？
+
+因为 `if sex == 1` 语句被执行力两次，看下图再说明下：
+
+![](https://gitee.com/hxl_xsj/resource/raw/master/images/test-mode-count-html.png)
+
+* 执行 TestGetSex 和 TestGetSex2 函数时，`if sex == 1` 都会被执行一次，因此总共 2 次，而剩下的语句只执行了 1 次。
+* 绿色表示覆盖率最高，下来是 low coverage 对应的颜色，表示低覆盖率。
+
+总结，count 模式下能看出哪些代码执行的次数多，而 set 模式下不能。
+
+### 3. 模式 atomic
+
+
+
+
+
+
 
 
 
