--- a/content/posts/gobasic/19.md
+++ b/content/posts/gobasic/19.md
@@ -1,11 +1,11 @@
 ---
 title: "Go基础系列：19. 单元测试"
-date: 2021-12-07
-draft: true
+date: 2021-12-10
 categories: ["Golang"]
 tags: ["测试"]
 description: "编写更健壮的 Go 语言程序"
 series: ["Go基础系列"]
+keywords: ["go", "golang", "单元测试"]
 ---
 
 大家好，我是 “潇洒哥老苗”。
@@ -14,10 +14,16 @@ series: ["Go基础系列"]
 
 依赖 Go 版本：1.16.4。
 
+源码地址：
+
+[https://github.com/miaogaolin/gobasic](https://github.com/miaogaolin/gobasic)
+
 ## 学到什么
+
 1. 什么是单元测试？
 2. 如何编写单元测试？
-3. 如何测试你的 Go 代码？
+3. 什么是代码覆盖率？
+4. 如何使用 testify 包？
 
 ## 引入
 先不讲解 “单元测试” 的概念，在不使用 “单元测试” 的情况下，我们如何测试一个函数或方法的正确性。
@@ -26,7 +32,6 @@ series: ["Go基础系列"]
 
 ```go
 // gobasic/unittest/add.go
-
 func Add(num1, num2 int) int {
 	return num1 + num2
 }
@@ -55,9 +60,9 @@ func main() {
 * 测试完后，测试代码必须删除；
 * 如果不删除，会参与编译。
 
-你可能会说，可以使用 debug 方式测试，但这样，没有任何测试过程，后期如果修改了代码，如何确定什么样的结果是正确的。
+你可能会说，可以使用 debug 方式测试，但这样，没有任何测试过程，后期如果修改了代码，如何确定当时什么样的结果是正确的。
 
-下来，引入 “单元测试” 的概念，已解决上述遇到的问题。
+下来，引入 “单元测试” 的概念，以解决上述所说的问题。
 
 ## 什么是单元测试
 
@@ -76,14 +81,14 @@ func main() {
 	* add.go
 	* add_test.go 单元测试
 
-假如源文件的命名是 **xxx.go**, 那单元测试文件的命名则为 **xxx_test.go**。如果在编译阶段，xxx_test.go 文件会被忽略。
+假如源文件的命名是 **xxx.go**, 那单元测试文件的命名则为 **xxx_test.go**。如果在编译阶段 xxx_test.go 文件会被忽略。
 
 
 ## 写单元测试
 
 下来我们一块在 add_test.go 文件中给 Add 函数写一个单元测试。
 
-### 基本结构
+### 1. 基本结构
 
 先看看基本结构，具体的测试内容没写，如下：
 
@@ -106,13 +111,12 @@ func TestAdd(t *testing.T) {
 
 所有的单元测试函数都要按照该要求定义，定义好后，下来看看如何编写测试内容。
 
-### 测试内容
+### 2. 测试内容
 
 测试 Add 函数的计算结果是否正确。
 
 ```go
 // gobasic/unittest/add_test.go
-
 package unittest
 
 import "testing"
@@ -163,7 +167,7 @@ FAIL
 * `Fatalf` 格式化打印错误日志、标记为失败，并且内部调用了 FaileNow 函数，也不往下执行。
 
 
-你可能发现，没有成功的方法，不过确实也没有，只要没有通知错误，那就说明是正确的。正确的是下面这个样子：
+你可能发现，没有成功的方法，不过确实也没有，只要没有通知错误，那就说明是正确的。正确的测试结果是下面这个样子：
 ```bash
 $ go test
 ok      github.com/miaogaolin/gobasic/unittest  0.244s
@@ -185,7 +189,6 @@ ok      github.com/miaogaolin/gobasic/unittest  0.244s
 
 ```go
 // gobasic/vet/main.go
-
 package main
 
 import "fmt"
@@ -198,7 +201,7 @@ func main() {
 %!d(string=miao)
 ```
 
-看结果是不是很奇怪，是因为占位符 %d 需要的是整数，但给的确实字符串。不熟悉占位符的朋友，直接前往 [《详解 20 个占位符》](https://mp.weixin.qq.com/s/34VUrymErxPMtLvxPPaB8Q)。
+看结果是不是很奇怪，是因为占位符 %d 需要的是整数，但给的是字符串。不熟悉占位符的朋友，直接前往 [《详解 20 个占位符》](https://mp.weixin.qq.com/s/34VUrymErxPMtLvxPPaB8Q)。
 
 对于这种类似的错误，编译器是不会报错的，这时候就用到了 `go vet` 命令，运行如下：
 
@@ -208,13 +211,14 @@ $ go vet
 .\main.go:6:2: Printf format %d has arg "miao" of wrong type string
 ```
 
+所以在测试时无需单独运行 `go vet` 命令，一个 `go test` 命令就包含了。 
+
 ## 表格驱动测试
 
 在对于一个函数或方法进行测试时，很多时候要测试多种情况，那对于多种情况如何进行测试呢？下来看看。
 
 ```go
 // gobasic/unittest/add_test.go
-
 package unittest
 
 import "testing"
@@ -240,7 +244,6 @@ func TestAdd1(t *testing.T) {
 
 ```go
 // gobasic/unittest/add_test.go
-
 package unittest
 
 import "testing"
@@ -282,9 +285,9 @@ PASS
 ok      command-line-arguments  0.041s
 ```
 
-* `go test` 命令后的 add.go 和 add_test.go 说明依赖的文件和测试的文件；
+* `go test` 命令后的 add.go 和 add_test.go 文件是特意指定需要测试和依赖的文件；
 * `-test.run` 指明测试的函数名；
-* `-v` 展示详细的过程，如果不写，测试成功时，不会打印过程。
+* `-v` 展示详细的过程，如果不写，测试成功时，不会打印详细过程。
 
 
 ## 缓存
@@ -308,7 +311,7 @@ ok      github.com/miaogaolin/gobasic/unittest  0.228s
 $ go test ./
 ok      github.com/miaogaolin/gobasic/unittest  (cached)
 ```
-可以看到第二次的结果中出现了 **cached** 字样。
+可以看到第二次的结果中出现了 **cached** 字样，如果你问 “删掉后面的 `./`” 可以吗？答：不可以，因为不会进行缓存。
 
 ### 1. 禁用缓存
 如果想禁用缓存，可以使用如下命令运行：
@@ -346,7 +349,7 @@ func TestC(t *testing.T) {
 	time.Sleep(time.Second)
 }
 ```
-该例子中没有写任何具体的测试逻辑，只是每个函数休眠了 1s 中，目的只是演示测试的的时间。
+该例子中没有写任何具体的测试逻辑，只是每个函数休眠了 1s 中，目的只是演示测试的时间。
 
 测试结果如下：
 ```bash
@@ -379,7 +382,7 @@ func TestC(t *testing.T) {
 ```bash
 ok      command-line-arguments  1.049s
 ```
-很明显可以看到，测试的时间缩短了 1s，大概是原来时间的三分之一。
+很明显可以看到，测试的时间缩短到了 1s，大概是原来时间的三分之一。
 
 ## 代码覆盖率
 代码覆盖率是一个指数，例如：20%、30% 、100% 等。
@@ -396,12 +399,12 @@ coverage: 100.0% of statements
 ok      github.com/miaogaolin/gobasic/unittest  1.045s
 ```
 * `-cover` 输出覆盖率的标识符；
-* 覆盖率为 100%，很完美。
+* 覆盖率为 100%，通过 “已执行语句占总语句的比例” 计算。
 
-在计算覆盖率时，Go 语言中总共有三种模式，你可以理解为三种方法，下来分别说说。
+在计算覆盖率时，还有三种模式，不同的模式在已执行语句的次数统计时存在差异性。
 
 ### 1. 模式 set
-这是默认的模式，它的计算方式是 “通过计算已执行语句的占比”。
+这是默认的模式，它的计算方式是 “如果同一语句多次执行只记录一次”。
 
 举例看个例子，如下：
 
@@ -439,7 +442,7 @@ ok      command-line-arguments  0.228s  coverage: 66.7% of statements
 ```bash
 go test -coverprofile profile
 ```
-运行后，会在当前目录生成一个覆盖率的采样文件 **profile**，打开内容如下：
+运行后，会在当前目录生成一个覆盖率的采样文件 profile，打开内容如下：
 
 ```txt
 mode: set
@@ -468,7 +471,7 @@ go tool cover -html profile
 ![](https://gitee.com/hxl_xsj/resource/raw/master/images/set-html-profile.png)
 
 
-可得：总语句数为 3，覆盖语句数为 2，计算覆盖率为 2/3 = 66.7%。
+可得：总语句数为 3，覆盖语句（执行语句）数为 2，计算覆盖率为 2/3 = 66.7%。
 
 如果想达到 100% 覆盖，只需要增加 else 的测试情况，如下：
 
@@ -501,11 +504,11 @@ github.com/miaogaolin/gobasic/testcover/sex.go:3.29,4.14 1 2
 github.com/miaogaolin/gobasic/testcover/sex.go:4.14,6.3 1 1
 github.com/miaogaolin/gobasic/testcover/sex.go:6.8,8.3 1 1
 ```
-如果再切换到 set 模式下生成，唯一不同点内容中第二行中的最后一个数字，set 模式下会是 1。
+如果再切换到 set 模式下生成，唯一不同点是，内容第二行中的最后一个数字 2 在set 模式下会是 1。
 
 那 count 模式下为啥是 2 呢？
 
-因为 `if sex == 1` 语句被执行力两次，看下图再说明下：
+因为 `if sex == 1` 语句被执行了两次，看下图再说明下：
 
 ![](https://gitee.com/hxl_xsj/resource/raw/master/images/test-mode-count-html.png)
 
@@ -515,6 +518,128 @@ github.com/miaogaolin/gobasic/testcover/sex.go:6.8,8.3 1 1
 总结，count 模式下能看出哪些代码执行的次数多，而 set 模式下不能。
 
 ### 3. 模式 atomic
+该模式和 count 类似，都是统计执行语句的次数，不同点是，在并发情况下 atomic 模式比 count 模式计数更精确。
+
+来看一个没啥用的并发例子，测试两者统计的结果，如下：
+
+```go
+// gobasic/testatomic/nums.go
+package testatomic
+
+import "sync"
+
+func AddNumber(num int) int {
+	var wg sync.WaitGroup
+
+	for i := 0; i < 200; i++ {
+		wg.Add(1)
+		go func(i int) {
+			i += num
+			wg.Done()
+		}(i)
+	}
+	wg.Wait()
+	return num
+}
+```
+该代码创建了 200 个 Goroutine，再对 200 个数并发的与 `num` 参数相加。
+
+单元测试的代码就不写了，只要调用了该函数就可以。如果想看，直接在 Github 上看完整代码。
+
+count 模式下生成的 profile 文件内容如下：
+```text
+mode: count
+github.com/miaogaolin/gobasic/testatomic/nums.go:5.29,8.27 2 1
+github.com/miaogaolin/gobasic/testatomic/nums.go:15.2,16.12 2 1
+github.com/miaogaolin/gobasic/testatomic/nums.go:8.27,10.18 2 200
+github.com/miaogaolin/gobasic/testatomic/nums.go:10.18,13.4 2 199
+```
+直接看最后一行，对应到源码上是 Goroutine 的代码块，即：`go func(i int) {...}`。
+
+199 表示的是该语句的执行次数，但循环次数总共是 200 次，所以是不准确的。
+
+那再以 atomic 模式运行，命令如下：
+
+```
+go test -coverprofile profile -covermode atomic
+```
+profile 文件内容如下：
+
+```text
+mode: atomic
+github.com/miaogaolin/gobasic/testatomic/nums.go:5.29,8.27 2 1
+github.com/miaogaolin/gobasic/testatomic/nums.go:15.2,16.12 2 1
+github.com/miaogaolin/gobasic/testatomic/nums.go:8.27,10.18 2 200
+github.com/miaogaolin/gobasic/testatomic/nums.go:10.18,13.4 2 200
+```
+直接看内容的最后一个数字，这下正确了。
+
+## testify 包
+当对一个项目中写大量的单元测试时，如果按照上述的方式去写，就会产生大量的判断语句。
+
+例如这样的 if 判断：
+```go
+func TestAdd(t *testing.T) {
+	excepted := 4
+	actual := Add(2, 3)
+	if excepted != actual {
+		t.Errorf("excepted：%d, actual:%d", excepted, actual)
+	}
+}
+```
+下来我推荐一个第三方包 testfiy，首先在终端运行如下命令，表示下载该包。
+
+```bash
+go get github.com/stretchr/testify
+```
+
+改写单元测试代码，如下：
+```go
+package unittest
+
+import (
+	"github.com/stretchr/testify/assert"
+	"testing"
+)
+
+func TestAdd(t *testing.T) {
+	excepted := 4
+	actual := Add(2, 3)
+	assert.Equal(t, excepted, actual)
+}
+```
+* 导入 testify 包下的一个子包 assert；
+* 使用 `assert.Equal` 函数简化 if 语句和日志打印，该函数期待 excepted 和 actual 变量相同，如果不相同会打印失败日志。
+
+看看失败是啥样子，如下：
+```bash
+--- FAIL: TestAdd (0.00s)
+    add_test.go:11: 
+                Error Trace:    add_test.go:11
+                Error:          Not equal: 
+                                expected: 4
+                                actual  : 5
+                Test:           TestAdd
+FAIL
+FAIL    command-line-arguments  0.578s
+FAIL
+```
+也是打印出了期待的值和实际的值，并说明了两值不相等。
+
+当然该包也不只有 Equal 函数，这个学习就留给自己了，相信你可以的。
+
+## 小结
+本篇讲解了 Go 语言中如何写单元测试，并讲了代码覆盖率的 3 种统计方式，其中单元测试最重要，一定要掌握。
+
+如果在测试代码时发现了和我所写的结果有出入，那可能就是版本差异。
+
+有问题的话，随意讨论。
+
+
+
+
+
+
 
 
 
