--- a/content/posts/gobasic/19.md
+++ b/content/posts/gobasic/19.md
@@ -2,10 +2,8 @@
 title: "Go基础系列：19. 单元测试"
 date: 2021-12-10
 categories: ["Golang"]
-tags: ["测试"]
-description: "编写更健壮的 Go 语言程序"
+tags: ["单元测试", "Golang", "Go"]
 series: ["Go基础系列"]
-keywords: ["go", "golang", "单元测试"]
 ---
 
 大家好，我是 “潇洒哥老苗”。
