update article meta

--- a/content/posts/gobasic/19.md
+++ b/content/posts/gobasic/19.md
@@ -2,8 +2,10 @@
 title: "Go基础系列：19. 单元测试"
 date: 2021-12-10
 categories: ["Golang"]
-tags: ["单元测试", "Golang", "Go"]
+tags: ["单元测试"]
+keywords: ["Golang", "Go", "单元测试"]
 series: ["Go基础系列"]
+description: "Go 语言中如何进行单元测试，代码覆盖率的作用及不同模式，testify 包的使用"
 ---
 
 大家好，我是 “潇洒哥老苗”。
