--- a/content/posts/gobasic/19.md
+++ b/content/posts/gobasic/19.md
@@ -6,6 +6,7 @@ tags: ["单元测试"]
 keywords: ["Golang", "Go", "单元测试"]
 series: ["Go基础系列"]
 description: "Go 语言中如何进行单元测试，代码覆盖率的作用及不同模式，testify 包的使用"
+images: ["https://gitee.com/evan-miao/resource/raw/master/images/单元测试.png"]
 ---
 
 大家好，我是 “潇洒哥老苗”。
@@ -152,7 +153,7 @@ FAIL
 
 假如你使用了 Goland 工具，直接点击下图的红框位置即可。
 
-![](https://gitee.com/hxl_xsj/resource/raw/master/images/Snipaste_2021-12-08_17-53-20.png)
+![](https://gitee.com/evan-miao/resource/raw/master/images/Snipaste_2021-12-08_17-53-20.png)
 
 
 ## *testing.T
@@ -457,18 +458,18 @@ go tool cover -html profile
 ```
 `-html profile` 指明将 profile 文件在浏览器渲染出来，运行后会自动在浏览器出现如下图：
 
-![](https://gitee.com/hxl_xsj/resource/raw/master/images/Snipaste_2021-12-10_17-54-48.png)
+![](https://gitee.com/evan-miao/resource/raw/master/images/Snipaste_2021-12-10_17-54-48.png)
 
 灰色不用管，绿色的已覆盖，红色的未覆盖。
 
 下来回到 profile 文件的内容，看图说明：
 
-![](https://gitee.com/hxl_xsj/resource/raw/master/images/test-set.png)
+![](https://gitee.com/evan-miao/resource/raw/master/images/test-set.png)
 
 * 第一行，覆盖率模式；
 * 剩下三行，对应下图不同颜色的下划线。
 
-![](https://gitee.com/hxl_xsj/resource/raw/master/images/set-html-profile.png)
+![](https://gitee.com/evan-miao/resource/raw/master/images/set-html-profile.png)
 
 
 可得：总语句数为 3，覆盖语句（执行语句）数为 2，计算覆盖率为 2/3 = 66.7%。
@@ -510,7 +511,7 @@ github.com/miaogaolin/gobasic/testcover/sex.go:6.8,8.3 1 1
 
 因为 `if sex == 1` 语句被执行了两次，看下图再说明下：
 
-![](https://gitee.com/hxl_xsj/resource/raw/master/images/test-mode-count-html.png)
+![](https://gitee.com/evan-miao/resource/raw/master/images/test-mode-count-html.png)
 
 * 执行 TestGetSex 和 TestGetSex2 函数时，`if sex == 1` 都会被执行一次，因此总共 2 次，而剩下的语句只执行了 1 次。
 * 绿色表示覆盖率最高，下来是 low coverage 对应的颜色，表示低覆盖率。
