--- a/content/posts/gobasic/19.md
+++ b/content/posts/gobasic/19.md
@@ -400,7 +400,7 @@ coverage: 100.0% of statements
 ok      github.com/miaogaolin/gobasic/unittest  1.045s
 ```
 * `-cover` 输出覆盖率的标识符；
-* 覆盖率为 100%，通过 “已执行语句占总语句的比例” 计算。
+* 覆盖率为 100%，说明被测试的函数代码都有运行到，**覆盖率 = 已执行语句数 / 总语句数**。
 
 在计算覆盖率时，还有三种模式，不同的模式在已执行语句的次数统计时存在差异性。
 
@@ -630,7 +630,7 @@ FAIL
 当然该包也不只有 Equal 函数，这个学习就留给自己了，相信你可以的。
 
 ## 小结
-本篇讲解了 Go 语言中如何写单元测试，并讲了代码覆盖率的 3 种统计方式，其中单元测试最重要，一定要掌握。
+本篇讲解了 Go 语言中如何写单元测试，并讲了代码覆盖率的 3 种统计方式，对于如何给函数和方法写单元测试，一定要掌握。
 
 如果在测试代码时发现了和我所写的结果有出入，那可能就是版本差异。
 
