update weixin url

--- a/content/posts/go/2.md
+++ b/content/posts/go/2.md
@@ -76,7 +76,7 @@ func (g *Gopher) WriteTo(w io.Writer) (size int64, err error) {
 - 将 `Name` 和 `AgeYears` 字段数据存入 `io.Writer` 类型中。
 - 如果存入的数据是 `string` 或 `[]byte` 类型，再追加其长度数据。
 
-如果对 `binary` 这个标准包不知道怎么使用，就看看我的另一篇文章[《快速了解 “小字端” 和 “大字端” 及 Go 语言中的使用》](https://mp.weixin.qq.com/s/fATns17paqbmG8Ikb3ZedA)。
+如果对 `binary` 这个标准包不知道怎么使用，就看看我的另一篇文章[《快速了解 “小字端” 和 “大字端” 及 Go 语言中的使用》](/posts/go/1/)。
 
 ## 先处理错误避免嵌套
 
