--- a/content/posts/gobasic/19.md
+++ b/content/posts/gobasic/19.md
@@ -11,7 +11,7 @@ images: ["https://gitee.com/evan-miao/resource/raw/master/images/单元测试.pn
 
 大家好，我是 “潇洒哥老苗”。
 
-该系列上篇讲解了 [《18. 并发》](https://mp.weixin.qq.com/s/-PvS3yZ_-BPjjPRPB_528A)，今天我们学学 Go 语言中的单元测试。
+该系列上篇讲解了 [《并发》](/posts/gobasic/18/)，今天我们学学 Go 语言中的单元测试。
 
 依赖 Go 版本：1.16.4。
 
@@ -201,7 +201,7 @@ func main() {
 %!d(string=miao)
 ```
 
-看结果是不是很奇怪，是因为占位符 %d 需要的是整数，但给的是字符串。不熟悉占位符的朋友，直接前往 [《详解 20 个占位符》](https://mp.weixin.qq.com/s/34VUrymErxPMtLvxPPaB8Q)。
+看结果是不是很奇怪，是因为占位符 %d 需要的是整数，但给的是字符串。不熟悉占位符的朋友，直接前往 [《详解 20 个占位符》](/posts/gobasic/17/)。
 
 对于这种类似的错误，编译器是不会报错的，这时候就用到了 `go vet` 命令，运行如下：
 
