--- a/content/posts/gobasic/8 切片.md
+++ b/content/posts/gobasic/8 切片.md
@@ -23,7 +23,7 @@ series: ["Go基础系列"]
 
 ## 概念
 
-在学习切片之前请先将上篇文章《[内置集合 - 数组](https://mp.weixin.qq.com/s/je2Sph7O5DLO4uU4nUy99Q)》搞明白。
+在学习切片之前请先将上篇文章《[内置集合 - 数组](/posts/gobasic/7-数组/)》搞明白。
 
 切片使用起来类似长度可变的数组，不像数组长度是固定的。但切片的底层使用的还是数组，切片只是保存了对数组的引用，帮着管理数组，实现可变的效果。
 
